# browser

./: .gitignore  .gitmodules  .mailmap  .travis.yml  AUTHORS  CHANGELOG.md  CMakeLists.txt  README.md  axrbrowser.qbs  config.in.h
.travis/: configure.sh  make.sh
AXR Browser.xcodeproj/: project.pbxproj
AXR Browser.xcodeproj/config/: AXRBrowser.xcconfig
AXR Browser.xcodeproj/rules/: rcc  uic
cmake/: DS_Store  Package.cmake  PackageOverrides.cmake.in  Variables.cmake  dmg-background.tiff  fixdeb.sh  postpackage.sh
src/browser/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  BrowserApplication.cpp  BrowserApplication.h  BrowserSettings.cpp  BrowserSettings.h  BrowserTab.cpp  BrowserTab.h  BrowserWindow.cpp  BrowserWindow.h  BrowserWindow.ui  CMakeLists.txt  Info.plist  LogWindow.cpp  LogWindow.h  LogWindow.ui  PreferencesDialog.cpp  PreferencesDialog.h  PreferencesDialog.ui  Resources.qrc  axrbrowser.desktop  browser.qbs  main.cpp  resources.aps
